fixed main hero image (repeat) and the featured section
featured section was shit and not centered. now it is.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -69,8 +69,8 @@ nav span {
 .hero {
   display: flex;
   background-image: url(../images/img-mission-background.jpg);
+  background-repeat: repeat;  
   height: 700px;
-  width: 1200px;
   padding-top: 60px;
   background-color: black;
 }
@@ -86,6 +86,8 @@ nav span {
   flex-wrap: wrap;
   justify-content: center;
   width: 1000px;
+  height: 700px;
+  margin: auto;
 }
 
 .flex-container {
@@ -121,6 +123,9 @@ div.item {
   background-color: black;
   align-content: center;
   width: 300px;
+  padding-top: 70px;
+  opacity: 1;
+  
 }
 
 .info {
